# Entity-Role-Detection-in-Memes

./: .gitignore  LICENSE  README.md  onstart.sh  prog.prof  pyproject.toml  setup.sh
configs/: config.yaml
data/: ocr_data_openai.json  ocr_data_openai_preprocessed.json
data/HVVMemesWithFaces/annotations/: add_face_data.ipynb  annotations_logically.jsonl
scripts/provisioning/: onstart_vastai.sh  setup_vastai.sh
src/meme_entity_detection/baseline/: config.py  dataset.py  engine.py  evaluate_test_file.py  model.py  process_data.py  role_label_inference.py  role_label_test_eval.py  role_label_test_eval_batch.py  test_eval.py  training_script.py
src/meme_entity_detection/dataset/: config.py  data_module.py  meme_role_dataset.py  test.py
src/meme_entity_detection/model/: __init__.py  chatgpt_prompts.py  deberta.py  interface.py  roberta.py  vilt.py
src/meme_entity_detection/model.py/: vilt_classification.py
src/meme_entity_detection/notebooks/: Kosmos Image Captioning.ipynb  chatgpt_api.ipynb  create_chatgpt_dataset.ipynb  data_exploration.ipynb  huggingface_dataset_experiments.ipynb  ocr_quality_check.ipynb  test.ipynb  tokenizer.ipynb
src/meme_entity_detection/scripts/: baseline.py  download_data.py
src/meme_entity_detection/system/: __init__.py  baseline.py  baseline_bert.py
src/meme_entity_detection/utils/: task_properties.py
