[tool.poetry]
name = "meme-entity-detection"
version = "0.1.0"
description = ""
authors = ["Leon De Anrade <leondeandrade@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.2"
tqdm = "^4.66.4"
torch = "^2.3.0"
transformers = "^4.41.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
tokenizers = "^0.19.1"
sentencepiece = "^0.2.0"
protobuf = "^5.26.1"
lightning = {version = "^2.2.5", extras = ["extra"]}
tensorboard = "^2.16.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
COLUMN_LIMIT = 120
SPLIT_COMPLEX_COMPREHENSION = true
DEDENT_CLOSING_BRACKETS = true
COALESCE_BRACKETS = true
SPLIT_BEFORE_NAMED_ASSIGNS = false
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
